project2_handle/test/test_11711707_02.out
Error type 3 at Line 3: c variable is redefined in the same scope
